--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "-": "^0.0.1",
+    "D": "^1.0.0",
+    "sass": "^1.66.1",
     "vue": "^3.3.4"
   },
   "devDependencies": {
