--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "-": "^0.0.1",
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "D": "^1.0.0",
     "sass": "^1.66.1",
     "vue": "^3.3.4"
